docs/api/qiskit/0.29/qiskit.opflow.gradients.QFIBase.mdx
---
title: QFIBase (v0.29)
description: API reference for qiskit.opflow.gradients.QFIBase in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.gradients.QFIBase
---

# QFIBase

<Class id="qiskit.opflow.gradients.QFIBase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/opflow/gradients/qfi_base.py" signature="QFIBase(qfi_method='lin_comb_full')" modifiers="class">
  Bases: `qiskit.opflow.gradients.derivative_base.DerivativeBase`

  Base class for Quantum Fisher Information (QFI).

  Compute the Quantum Fisher Information (QFI) given a pure, parameterized quantum state.

  The QFI is:

  > \[QFI]kl= Re\[〈∂kψ|∂lψ〉−〈∂kψ|ψ〉〈ψ|∂lψ〉] \* 4.

  **Parameters**

  **qfi\_method** (`Union`\[`str`, `CircuitQFI`]) – The method used to compute the state/probability gradient. Can be either a [`CircuitQFI`](qiskit.opflow.gradients.CircuitQFI "qiskit.opflow.gradients.CircuitQFI") instance or one of the following pre-defined strings `'lin_comb_full'`, `` 'overlap_diag'` `` or `` 'overlap_block_diag'` ``.

  **Raises**

  **ValueError** – if `qfi_method` is neither a `CircuitQFI` object nor one of the predefined strings.

  ## Attributes

  ### qfi\_method

  <Attribute id="qiskit.opflow.gradients.QFIBase.qfi_method">
    Returns `CircuitQFI`.

    **Return type**

    `CircuitQFI`

    **Returns**

    `CircuitQFI`.
  </Attribute>
</Class>

